@@ -1,3 +1,9 @@
+2009-09-09  Petr Machata  <pmachata@redhat.com>
+
+	* dwarfstrings.c (dwarf_line_standard_opcode_string): New function.
+	* dwarfstrings.h: Declare it.
+	* dwarflint.c (check_line_structural): Use it.
+
 2009-08-27  Roland McGrath  <roland@redhat.com>
 
 	* dwarfcmp.cc (do_writer_test): New function, broken out of ...
